tests/fixtures/invalid/pow_int_list_bytes.py
# Cannot call pow() with Int, List[int], Bytes
x = pow(1, [1, 2, 3], b"hello")
